--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <ul>
                         <li><a target="_blank" href="https://www.instagram.com/testeateconuwu/"><i class="fa fa-instagram"></i></a></li>
                     </ul>
-					<a href="img/by-nc-sa.png"><i class="fa fa-facebook"></i></a>
+					<a src="img/by-nc-sa.png"></a>
                 </div>
     </footer>
 
