--- a/tests/twitter/twitter.html
+++ b/tests/twitter/twitter.html
@@ -75,16 +75,16 @@
           <div class="pregunta8">
             <span>¿Ofrece Twitter ofertas personalizadas gracias a la infomación que recopila de sus usuarios?</span>
             <div class="botones">
-              <a href="#services" onclick="siguiente(8,9,0)"><i class="fa fa-heart"></i></a>
-              <a href="#services" onclick="siguiente(8,9,1)"><i class="fa fa-times" aria-hidden="true"></i></a>
+              <a href="#services" onclick="siguiente(8,9,1)"><i class="fa fa-heart"></i></a>
+              <a href="#services" onclick="siguiente(8,9,0)"><i class="fa fa-times" aria-hidden="true"></i></a>
             </div>
           </div>
 
           <div class="pregunta9">
             <span>¿Realiza Twitter tranferencias internacionales de tus datos de usuario?</span>
             <div class="botones">
-              <a href="#services" onclick="siguiente(9,-1,0);resultado()"><i class="fa fa-heart"></i></a>
-              <a href="#services" onclick="siguiente(9,-1,1);resultado()"><i class="fa fa-times" aria-hidden="true"></i></a>
+              <a href="#services" onclick="siguiente(9,-1,1);resultado()"><i class="fa fa-heart"></i></a>
+              <a href="#services" onclick="siguiente(9,-1,0);resultado()"><i class="fa fa-times" aria-hidden="true"></i></a>
             </div>
           </div>
 
@@ -151,7 +151,7 @@
                                     <h4>¿Ofrece Twitter ofertas personalizadas gracias a la infomación que recopila de sus usuarios?</h4>
                                     <div class="line-dec"></div>
                                     <p class="cont">Sí, de hecho es una de las razones por las que recogen los datos. Entra dentro de su objetivo de "mejorar la experiencia de usuario", creando perfiles para personalizar mejor las ofertas publicitarias.</p>
-                                  
+									<div class="ares"> <a class="boton_respuesta" href="https://gdpr.twitter.com/es/faq.html">Más información</a></div>
                                 </div>
                             </div>
                             <div class="divser col-md-4 P9">
