--- a/tests/google/testGoogle.html
+++ b/tests/google/testGoogle.html
@@ -209,11 +209,12 @@
                     <a class="footer_button" href="../../index.html">Página principal</a>
                   </div>
                 <ul>
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-
-                </ul>
+                        <li><a target="_blank" href="https://www.instagram.com/testeateconuwu/"><i class="fa fa-instagram"></i></a></li>
+                    </ul>
+                   <!-- <img src="img/by-nc-sa.png">-->
+                   <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" target="_blank" href="https://etica2020.github.io/etica/">TIS_POLÍTICA_DE_DATOS_2020/2021</a> by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" target="_blank" href="https://github.com/Etica2020">Victoria Gnatiuk Romaniuk, Adrián Nieto Moya, Daniela Nicoleta Boldureanu, Lucía Latorre Magaz, Alejandro Ortiz Pintado</a> is licensed under <a target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-SA 4.0</a></p>
+                   <div><img style="height:50px !important; margin-top: 10px;margin-left:3px;vertical-align:text-bottom;" src="../../img/by-nc-sa.png"></div>
+                   </div>
             </div>
 </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
