--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <a href="#home">Back To Top</a>
                     </div>
                     <!-- Contador de visitas -->
-                        <p class="contador-txt"> Nº de tests realizados</p>
+                        <p class="contador-txt"> Nº de visitas</p>
                         <img class="contador-img" style="border: 0px solid; display: inline;" alt="contador de visitas" src="http://www.websmultimedia.com/contador-de-visitas.php?id=289442"></a>
                     
                     <ul>
