--- a/index.html
+++ b/index.html
@@ -109,14 +109,16 @@
                         <a href="#home">Back To Top</a>
                     </div>
                     <!-- Contador de visitas -->
-                        <p class="contador-txt"> Nº de tests realizados</p>
-                        <img class="contador-img" style="border: 0px solid; display: inline;" alt="contador de visitas" src="http://www.websmultimedia.com/contador-de-visitas.php?id=288972"></a>
+                        <p class="contador-txt"> Nº de visitas</p>
+                        <img class="contador-img" style="border: 0px solid; display: inline;" alt="contador de visitas" src="http://www.websmultimedia.com/contador-de-visitas.php?id=289442"></a>
                     
                     <ul>
                         <li><a target="_blank" href="https://www.instagram.com/testeateconuwu/"><i class="fa fa-instagram"></i></a></li>
                     </ul>
-					<img src="img/by-nc-sa.png">
-                </div>
+                   <!-- <img src="img/by-nc-sa.png">-->
+                   <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" target="_blank" href="https://etica2020.github.io/etica/">TIS_POLÍTICA_DE_DATOS_2020/2021</a> by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" target="_blank" href="https://github.com/Etica2020">Victoria Gnatiuk Romaniuk, Adrián Nieto Moya, Daniela Nicoleta Boldureanu, Lucía Latorre Magaz, Alejandro Ortiz Pintado</a> is licensed under <a target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-SA 4.0</a></p>
+                   <div><img style="height:50px !important; margin-top: 10px;margin-left:3px;vertical-align:text-bottom;" src="img/by-nc-sa.png"></div>
+                   </div>
     </footer>
 
 
