--- a/tests/facebook/facebook.html
+++ b/tests/facebook/facebook.html
@@ -20,7 +20,7 @@
         <script src="../../js/facebook.js"></script>
     </head>
 
-
+  <body>
     <div class="parallax-content baner-content" id="home">
         <div class="contenedor">
           <div class="pregunta1">
@@ -282,9 +282,6 @@
           });
         });
     </script>
-
-</body>
-</html>
 
 </body>
 </html>
