--- a/tests/twitter/twitter.html
+++ b/tests/twitter/twitter.html
@@ -1,4 +1,4 @@
--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es-ES">
     <head>
         <meta http-equiv="Content-Type"content="text/html"; charset="utf-8" >
@@ -20,7 +20,7 @@
         <script src="../../js/twitter.js"></script>
     </head>
 
-
+  <body>
     <div class="parallax-content baner-content" id="home">
         <div class="contenedor">
           <div class="pregunta1">
@@ -219,9 +219,6 @@
           });
         });
     </script>
-
-</body>
-</html>
 
 </body>
 </html>
