--- a/tests/whatsapp/whatsapp.html
+++ b/tests/whatsapp/whatsapp.html
@@ -20,7 +20,7 @@
         <script src="../../js/whatsapp.js"></script>
     </head>
 
-
+<body>
     <div class="parallax-content baner-content" id="home">
         <div class="contenedor">
           <div class="pregunta1">
@@ -221,9 +221,6 @@
           });
         });
     </script>
-
-</body>
-</html>
 
 </body>
 </html>
