--- a/tests/instagram/instagram.html
+++ b/tests/instagram/instagram.html
@@ -18,7 +18,7 @@
         <script src="../../js/instagram.js"></script>
     </head>
 
-
+  <body>
     <div class="parallax-content baner-content" id="home">
         <div class="contenedor">
           <div class="pregunta1">
@@ -218,9 +218,6 @@
           });
         });
     </script>
-
-</body>
-</html>
 
 </body>
 </html>
