Errata en el texto

--- a/tests/twitter/twitter.html
+++ b/tests/twitter/twitter.html
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="pregunta7">
-            <span>¿Twitter sabe qué apps tiened instaladas en tu dispositivo?</span>
+            <span>¿Twitter sabe qué apps tienes instaladas en tu dispositivo?</span>
             <div class="botones">
               <a href="#services" onclick="siguiente(7,8,1)"><i class="fa fa-heart"></i></a>
               <a href="#services" onclick="siguiente(7,8,0)"><i class="fa fa-times" aria-hidden="true"></i></a>
@@ -139,7 +139,7 @@
                           </div>
                                 <div class="divser col-md-4 P7">
                                     <div class="service-item">
-                                        <h4>¿Twitter sabe qué apps tiened instaladas en tu dispositivo?</h4>
+                                        <h4>¿Twitter sabe qué apps tienes instaladas en tu dispositivo?</h4>
                                         <div class="line-dec"></div>
                                         <p class="cont">Sí, es uno de los permisos que le concedes a Twitter al descargar su aplicación.</p>
                                     </div>
